samples/_failures_safe/1761258195_5439cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e01dee89.c: In function ‘main’:
./samples/SAFE/__tmp_e01dee89.c:143:5: error: expected declaration or statement at end of input
  143 |     floyd_warshall(&g);
      |     ^~~~~~~~~~~~~~
